# docs/swagger.yaml
@@ -29,12 +29,51 @@ definitions:
       error:
         type: string
     type: object
+  users.GetByUsernameResponse:
+    properties:
+      error:
+        type: string
+      user:
+        $ref: '#/definitions/users.User'
+    type: object
+  users.User:
+    properties:
+      email:
+        type: string
+      id:
+        type: integer
+      username:
+        type: string
+    type: object
 info:
   contact: {}
   title: Service API
 paths:
-  /signin:
+  /{username}:
     get:
+      description: User's page
+      parameters:
+      - description: Token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/users.GetByUsernameResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/response.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.HTTPError'
+      summary: Page
+  /signin:
+    post:
       description: Authorization
       parameters:
       - description: Token
