# internal/router/router.go
@@ -28,11 +28,20 @@ func New(client *grpcclient.Client) *Router {
 
 func (r *Router) Configure() {
 	r.router.PathPrefix("/swagger/").HandlerFunc(httpSwagger.WrapHandler)
+	r.configureMiddlewares()
+	r.configureUserRoutes()
+}
+
+func (r *Router) configureUserRoutes() {
+	r.router.HandleFunc("/signup", r.user.SignUp).Methods("POST")
+	r.router.HandleFunc("/signin", r.user.SignIn).Methods("POST")
+	r.router.HandleFunc("/{username}", r.user.Page).Methods("GET")
+}
+
+func (r *Router) configureMiddlewares() {
 	r.Use(middleware.CORS)
 	r.Use(middleware.Logging)
 
-	r.router.HandleFunc("/signup", r.user.SignUp).Methods("POST")
-	r.router.HandleFunc("/signin", r.user.SignIn).Methods("POST")
 }
 
 func (r *Router) ServeHTTP(w http.ResponseWriter, req *http.Request) {
